// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CustomApprovalTab/> tests expired scenario 1`] = `
<div>
  <div>
    <div
      class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black StyledProps--background-yellow100 StyledProps--padding-top-xxlarge StyledProps--padding-bottom-xxlarge StyledProps--padding-left-large StyledProps--padding-right-large"
    >
      <span>
        pipeline.customApprovalStep.execution.wasExpired
      </span>
    </div>
  </div>
  <div
    class="StyledProps--font StyledProps--main stepDetailsContainer StyledProps--padding-top-large"
  >
    <table
      class="detailsTable"
    >
      <tbody>
        <tr>
          <th>
            startedAt
          </th>
          <td>
            -
          </td>
        </tr>
        <tr>
          <th>
            endedAt
          </th>
          <td>
            -
          </td>
        </tr>
        <tr>
          <th>
            pipeline.duration
          </th>
          <td>
            <div>
              MOCK DURATION
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <div
    class="customApproval"
  >
    <div
      class="collapse customApprovalCriteria"
    >
      <div
        class="title"
      >
        <div>
          <span>
            pipeline.approvalCriteria.approvalCriteria
          </span>
        </div>
        <button
          class="bp3-button bp3-minimal bp3-small toggle open"
          data-testid="toggle-collapse"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-chevron-down"
            icon="chevron-down"
          >
            <svg
              data-icon="chevron-down"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                chevron-down
              </desc>
              <path
                d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        class="bp3-collapse"
        style="height: auto; overflow-y: visible; transition: none;"
      >
        <div
          aria-hidden="false"
          class="bp3-collapse-body"
          style="transform: translateY(0); transition: none;"
        >
          <div
            class="content"
          >
            <div
              class="collapseContainer"
            >
              <div>
                pipeline.commonApprovalStep.execution.allConditionsMsg
              </div>
              <ul
                class="conditions"
              >
                <li>
                  <span>
                    pipeline.customApprovalStep.execution.conditions.equals
                  </span>
                  <div
                    class="keyWarper"
                  >
                    <p
                      class="StyledProps--font Text--lineclamp StyledProps--main key StyledProps--font-variation-small"
                      style="--text-line-clamp: 1;"
                    >
                      Resolved
                    </p>
                  </div>
                </li>
                <li>
                  <span>
                    pipeline.customApprovalStep.execution.conditions.not_in
                  </span>
                  <div
                    class="keyWarper"
                  >
                    <p
                      class="StyledProps--font Text--lineclamp StyledProps--main key StyledProps--font-variation-small"
                      style="--text-line-clamp: 1;"
                    >
                      In-progress
                    </p>
                    <p
                      class="StyledProps--font Text--lineclamp StyledProps--main key StyledProps--font-variation-small"
                      style="--text-line-clamp: 1;"
                    >
                      Open
                    </p>
                  </div>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="collapse customApprovalCriteria"
    >
      <div
        class="title"
      >
        <div>
          <span>
            pipeline.approvalCriteria.rejectionCriteria
          </span>
        </div>
        <button
          class="bp3-button bp3-minimal bp3-small toggle open"
          data-testid="toggle-collapse"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-chevron-down"
            icon="chevron-down"
          >
            <svg
              data-icon="chevron-down"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                chevron-down
              </desc>
              <path
                d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        class="bp3-collapse"
        style="height: auto; overflow-y: visible; transition: none;"
      >
        <div
          aria-hidden="false"
          class="bp3-collapse-body"
          style="transform: translateY(0); transition: none;"
        >
          <div
            class="content"
          >
            <div
              class="collapseContainer"
            >
              <span>
                common.jexlExpression
              </span>
              <div
                class="jexl"
              >
                \${changes[0].ref.displayId}-\${repository.name.substring(\${repository.name.indexOf('-')+1})}
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<CustomApprovalTab/> tests failed scenario 1`] = `
<div>
  <div
    class="errorMsgWrapper"
  >
    <div
      class="status failed"
    >
      <span
        class="bp3-icon bp3-icon-warning-sign StyledProps--main icon"
        icon="warning-sign"
      >
        <svg
          data-icon="warning-sign"
          height="9"
          viewBox="0 0 16 16"
          width="9"
        >
          <desc>
            warning-sign
          </desc>
          <path
            d="M15.84 13.5l.01-.01-7-12-.01.01c-.17-.3-.48-.5-.85-.5s-.67.2-.85.5l-.01-.01-7 12 .01.01c-.09.15-.15.31-.15.5 0 .55.45 1 1 1h14c.55 0 1-.45 1-1 0-.19-.06-.35-.15-.5zm-6.85-.51h-2v-2h2v2zm0-3h-2v-5h2v5z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
      <span>
        pipeline.executionStatus.Failed
      </span>
    </div>
    <div
      class="errorMsg"
    >
      <div
        class="errorTitle"
      >
        errorSummaryText
      </div>
      <p />
    </div>
  </div>
  <div
    class="StyledProps--font StyledProps--main stepDetailsContainer StyledProps--padding-top-large"
  >
    <table
      class="detailsTable"
    >
      <tbody>
        <tr>
          <th>
            startedAt
          </th>
          <td>
            -
          </td>
        </tr>
        <tr>
          <th>
            endedAt
          </th>
          <td>
            -
          </td>
        </tr>
        <tr>
          <th>
            pipeline.duration
          </th>
          <td>
            <div>
              MOCK DURATION
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <div
    class="customApproval"
  >
    <div
      class="collapse customApprovalCriteria"
    >
      <div
        class="title"
      >
        <div>
          <span>
            pipeline.approvalCriteria.approvalCriteria
          </span>
        </div>
        <button
          class="bp3-button bp3-minimal bp3-small toggle open"
          data-testid="toggle-collapse"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-chevron-down"
            icon="chevron-down"
          >
            <svg
              data-icon="chevron-down"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                chevron-down
              </desc>
              <path
                d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        class="bp3-collapse"
        style="height: auto; overflow-y: visible; transition: none;"
      >
        <div
          aria-hidden="false"
          class="bp3-collapse-body"
          style="transform: translateY(0); transition: none;"
        >
          <div
            class="content"
          >
            <div
              class="collapseContainer"
            >
              <div>
                pipeline.commonApprovalStep.execution.allConditionsMsg
              </div>
              <ul
                class="conditions"
              >
                <li>
                  <span>
                    pipeline.customApprovalStep.execution.conditions.equals
                  </span>
                  <div
                    class="keyWarper"
                  >
                    <p
                      class="StyledProps--font Text--lineclamp StyledProps--main key StyledProps--font-variation-small"
                      style="--text-line-clamp: 1;"
                    >
                      Resolved
                    </p>
                  </div>
                </li>
                <li>
                  <span>
                    pipeline.customApprovalStep.execution.conditions.not_in
                  </span>
                  <div
                    class="keyWarper"
                  >
                    <p
                      class="StyledProps--font Text--lineclamp StyledProps--main key StyledProps--font-variation-small"
                      style="--text-line-clamp: 1;"
                    >
                      In-progress
                    </p>
                    <p
                      class="StyledProps--font Text--lineclamp StyledProps--main key StyledProps--font-variation-small"
                      style="--text-line-clamp: 1;"
                    >
                      Open
                    </p>
                  </div>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="collapse customApprovalCriteria"
    >
      <div
        class="title"
      >
        <div>
          <span>
            pipeline.approvalCriteria.rejectionCriteria
          </span>
        </div>
        <button
          class="bp3-button bp3-minimal bp3-small toggle open"
          data-testid="toggle-collapse"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-chevron-down"
            icon="chevron-down"
          >
            <svg
              data-icon="chevron-down"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                chevron-down
              </desc>
              <path
                d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        class="bp3-collapse"
        style="height: auto; overflow-y: visible; transition: none;"
      >
        <div
          aria-hidden="false"
          class="bp3-collapse-body"
          style="transform: translateY(0); transition: none;"
        >
          <div
            class="content"
          >
            <div
              class="collapseContainer"
            >
              <span>
                common.jexlExpression
              </span>
              <div
                class="jexl"
              >
                \${changes[0].ref.displayId}-\${repository.name.substring(\${repository.name.indexOf('-')+1})}
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<CustomApprovalTab/> tests is in waiting state 1`] = `
<div>
  <div>
    <div
      class="info"
    >
      <div
        class="timer"
      >
        <div>
          MOCK DURATION
        </div>
        <span>
          pipeline.timeRemainingSuffix
        </span>
      </div>
      <div
        class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black StyledProps--margin-top-large StyledProps--margin-bottom-large"
      >
        <span>
          pipeline.customApprovalStep.execution.customApprovalPending
        </span>
      </div>
    </div>
  </div>
  <div
    class="customApproval applyTopPadding"
  >
    <div
      class="collapse customApprovalCriteria"
    >
      <div
        class="title"
      >
        <div>
          <span>
            pipeline.approvalCriteria.approvalCriteria
          </span>
        </div>
        <button
          class="bp3-button bp3-minimal bp3-small toggle open"
          data-testid="toggle-collapse"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-chevron-down"
            icon="chevron-down"
          >
            <svg
              data-icon="chevron-down"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                chevron-down
              </desc>
              <path
                d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        class="bp3-collapse"
        style="height: auto; overflow-y: visible; transition: none;"
      >
        <div
          aria-hidden="false"
          class="bp3-collapse-body"
          style="transform: translateY(0); transition: none;"
        >
          <div
            class="content"
          >
            <div
              class="collapseContainer"
            >
              <div>
                pipeline.commonApprovalStep.execution.allConditionsMsg
              </div>
              <ul
                class="conditions"
              >
                <li>
                  <span>
                    pipeline.customApprovalStep.execution.conditions.equals
                  </span>
                  <div
                    class="keyWarper"
                  >
                    <p
                      class="StyledProps--font Text--lineclamp StyledProps--main key StyledProps--font-variation-small"
                      style="--text-line-clamp: 1;"
                    >
                      Resolved
                    </p>
                  </div>
                </li>
                <li>
                  <span>
                    pipeline.customApprovalStep.execution.conditions.not_in
                  </span>
                  <div
                    class="keyWarper"
                  >
                    <p
                      class="StyledProps--font Text--lineclamp StyledProps--main key StyledProps--font-variation-small"
                      style="--text-line-clamp: 1;"
                    >
                      In-progress
                    </p>
                    <p
                      class="StyledProps--font Text--lineclamp StyledProps--main key StyledProps--font-variation-small"
                      style="--text-line-clamp: 1;"
                    >
                      Open
                    </p>
                  </div>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="collapse customApprovalCriteria"
    >
      <div
        class="title"
      >
        <div>
          <span>
            pipeline.approvalCriteria.rejectionCriteria
          </span>
        </div>
        <button
          class="bp3-button bp3-minimal bp3-small toggle open"
          data-testid="toggle-collapse"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-chevron-down"
            icon="chevron-down"
          >
            <svg
              data-icon="chevron-down"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                chevron-down
              </desc>
              <path
                d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        class="bp3-collapse"
        style="height: auto; overflow-y: visible; transition: none;"
      >
        <div
          aria-hidden="false"
          class="bp3-collapse-body"
          style="transform: translateY(0); transition: none;"
        >
          <div
            class="content"
          >
            <div
              class="collapseContainer"
            >
              <span>
                common.jexlExpression
              </span>
              <div
                class="jexl"
              >
                \${changes[0].ref.displayId}-\${repository.name.substring(\${repository.name.indexOf('-')+1})}
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<CustomApprovalTab/> tests not in waiting state  1`] = `
<div>
  <div>
    <div
      class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black StyledProps--background-yellow100 StyledProps--padding-top-xxlarge StyledProps--padding-bottom-xxlarge StyledProps--padding-left-large StyledProps--padding-right-large"
    >
      <span>
        pipeline.customApprovalStep.execution.wasApproved
      </span>
    </div>
  </div>
  <div
    class="StyledProps--font StyledProps--main stepDetailsContainer StyledProps--padding-top-large"
  >
    <table
      class="detailsTable"
    >
      <tbody>
        <tr>
          <th>
            startedAt
          </th>
          <td>
            -
          </td>
        </tr>
        <tr>
          <th>
            endedAt
          </th>
          <td>
            -
          </td>
        </tr>
        <tr>
          <th>
            pipeline.duration
          </th>
          <td>
            <div>
              MOCK DURATION
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <div
    class="customApproval"
  >
    <div
      class="collapse customApprovalCriteria"
    >
      <div
        class="title"
      >
        <div>
          <span>
            pipeline.approvalCriteria.approvalCriteria
          </span>
        </div>
        <button
          class="bp3-button bp3-minimal bp3-small toggle open"
          data-testid="toggle-collapse"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-chevron-down"
            icon="chevron-down"
          >
            <svg
              data-icon="chevron-down"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                chevron-down
              </desc>
              <path
                d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        class="bp3-collapse"
        style="height: auto; overflow-y: visible; transition: none;"
      >
        <div
          aria-hidden="false"
          class="bp3-collapse-body"
          style="transform: translateY(0); transition: none;"
        >
          <div
            class="content"
          >
            <div
              class="collapseContainer"
            >
              <div>
                pipeline.commonApprovalStep.execution.allConditionsMsg
              </div>
              <ul
                class="conditions"
              >
                <li>
                  <span>
                    pipeline.customApprovalStep.execution.conditions.equals
                  </span>
                  <div
                    class="keyWarper"
                  >
                    <p
                      class="StyledProps--font Text--lineclamp StyledProps--main key StyledProps--font-variation-small"
                      style="--text-line-clamp: 1;"
                    >
                      Resolved
                    </p>
                  </div>
                </li>
                <li>
                  <span>
                    pipeline.customApprovalStep.execution.conditions.not_in
                  </span>
                  <div
                    class="keyWarper"
                  >
                    <p
                      class="StyledProps--font Text--lineclamp StyledProps--main key StyledProps--font-variation-small"
                      style="--text-line-clamp: 1;"
                    >
                      In-progress
                    </p>
                    <p
                      class="StyledProps--font Text--lineclamp StyledProps--main key StyledProps--font-variation-small"
                      style="--text-line-clamp: 1;"
                    >
                      Open
                    </p>
                  </div>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="collapse customApprovalCriteria"
    >
      <div
        class="title"
      >
        <div>
          <span>
            pipeline.approvalCriteria.rejectionCriteria
          </span>
        </div>
        <button
          class="bp3-button bp3-minimal bp3-small toggle open"
          data-testid="toggle-collapse"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-chevron-down"
            icon="chevron-down"
          >
            <svg
              data-icon="chevron-down"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                chevron-down
              </desc>
              <path
                d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        class="bp3-collapse"
        style="height: auto; overflow-y: visible; transition: none;"
      >
        <div
          aria-hidden="false"
          class="bp3-collapse-body"
          style="transform: translateY(0); transition: none;"
        >
          <div
            class="content"
          >
            <div
              class="collapseContainer"
            >
              <span>
                common.jexlExpression
              </span>
              <div
                class="jexl"
              >
                \${changes[0].ref.displayId}-\${repository.name.substring(\${repository.name.indexOf('-')+1})}
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<CustomApprovalTab/> tests rejected scenario 1`] = `
<div>
  <div>
    <div
      class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black StyledProps--background-yellow100 StyledProps--padding-top-xxlarge StyledProps--padding-bottom-xxlarge StyledProps--padding-left-large StyledProps--padding-right-large"
    >
      <span>
        pipeline.customApprovalStep.execution.wasRejected
      </span>
    </div>
  </div>
  <div
    class="StyledProps--font StyledProps--main stepDetailsContainer StyledProps--padding-top-large"
  >
    <table
      class="detailsTable"
    >
      <tbody>
        <tr>
          <th>
            startedAt
          </th>
          <td>
            -
          </td>
        </tr>
        <tr>
          <th>
            endedAt
          </th>
          <td>
            -
          </td>
        </tr>
        <tr>
          <th>
            pipeline.duration
          </th>
          <td>
            <div>
              MOCK DURATION
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <div
    class="customApproval"
  >
    <div
      class="collapse customApprovalCriteria"
    >
      <div
        class="title"
      >
        <div>
          <span>
            pipeline.approvalCriteria.approvalCriteria
          </span>
        </div>
        <button
          class="bp3-button bp3-minimal bp3-small toggle open"
          data-testid="toggle-collapse"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-chevron-down"
            icon="chevron-down"
          >
            <svg
              data-icon="chevron-down"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                chevron-down
              </desc>
              <path
                d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        class="bp3-collapse"
        style="height: auto; overflow-y: visible; transition: none;"
      >
        <div
          aria-hidden="false"
          class="bp3-collapse-body"
          style="transform: translateY(0); transition: none;"
        >
          <div
            class="content"
          >
            <div
              class="collapseContainer"
            >
              <div>
                pipeline.commonApprovalStep.execution.allConditionsMsg
              </div>
              <ul
                class="conditions"
              >
                <li>
                  <span>
                    pipeline.customApprovalStep.execution.conditions.equals
                  </span>
                  <div
                    class="keyWarper"
                  >
                    <p
                      class="StyledProps--font Text--lineclamp StyledProps--main key StyledProps--font-variation-small"
                      style="--text-line-clamp: 1;"
                    >
                      Resolved
                    </p>
                  </div>
                </li>
                <li>
                  <span>
                    pipeline.customApprovalStep.execution.conditions.not_in
                  </span>
                  <div
                    class="keyWarper"
                  >
                    <p
                      class="StyledProps--font Text--lineclamp StyledProps--main key StyledProps--font-variation-small"
                      style="--text-line-clamp: 1;"
                    >
                      In-progress
                    </p>
                    <p
                      class="StyledProps--font Text--lineclamp StyledProps--main key StyledProps--font-variation-small"
                      style="--text-line-clamp: 1;"
                    >
                      Open
                    </p>
                  </div>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="collapse customApprovalCriteria"
    >
      <div
        class="title"
      >
        <div>
          <span>
            pipeline.approvalCriteria.rejectionCriteria
          </span>
        </div>
        <button
          class="bp3-button bp3-minimal bp3-small toggle open"
          data-testid="toggle-collapse"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-chevron-down"
            icon="chevron-down"
          >
            <svg
              data-icon="chevron-down"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                chevron-down
              </desc>
              <path
                d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        class="bp3-collapse"
        style="height: auto; overflow-y: visible; transition: none;"
      >
        <div
          aria-hidden="false"
          class="bp3-collapse-body"
          style="transform: translateY(0); transition: none;"
        >
          <div
            class="content"
          >
            <div
              class="collapseContainer"
            >
              <span>
                common.jexlExpression
              </span>
              <div
                class="jexl"
              >
                \${changes[0].ref.displayId}-\${repository.name.substring(\${repository.name.indexOf('-')+1})}
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
